# scarab

laser_odom/launch/: laser_pose_estimator.launch
laser_odom/src/: laser_odom.cpp
motion_primitives/: CMakeLists.txt  nodelets.xml  package.xml
motion_primitives/include/motion_primitives/: motion_primitive_nodelet.h
motion_primitives/src/: motion_primitive_nodelet.cpp
scarab/launch/: estimation.launch  gmapping.launch  simulator.launch
scarab_description/urdf/: kobuki.urdf.xacro
scarab_gazebo/launch/: scarab.rviz  scarab_world.launch
scarab_gazebo/models/levine/: model.sdf
scarab_twist/launch/: joystick.launch
